--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,11 @@ body {
   margin: auto;
 }
 
-.row{
+::placeholder {
+  color: #b1b1b1;
+}
+
+.row {
   display: flex;
 }
 
@@ -40,7 +44,7 @@ body {
   justify-content: center;
 }
 
-.register-page{
+.register-page {
   width: 100%;
   display: flex;
   align-items: center;
@@ -54,7 +58,7 @@ body {
   padding: 80px 0;
 }
 
-.register-page .register{
+.register-page .register {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -63,12 +67,94 @@ body {
   background: #fff;
 }
 
-.register-page .register h1{
+.register-page .register h1 {
   font-size: 30px;
   color: #3bb397;
+  font-weight: bold;
+  margin: 15px 0;
 }
 
-.register-page .auth-login{
+.register-page .register ul {
+  display: flex;
+  width: 20%;
+  justify-content: space-between;
+}
+
+.register-page .register ul a {
+  color: #222;
+}
+
+.register-page .register ul a svg {
+  width: 35px;
+  height: 35px;
+  border: 1px solid rgb(39, 39, 39);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  padding: 8px;
+}
+
+.register-page .register ul li:nth-child(1) a svg:hover {
+  background-color: rgb(0, 89, 255);
+  color: #fff;
+}
+
+.register-page .register ul li:nth-child(2) a svg:hover {
+  background-color: rgb(255, 30, 0);
+  color: #fff;
+}
+
+.register-page .register ul li:nth-child(3) a svg:hover {
+  background-color: rgb(0, 153, 255);
+  color: #fff;
+}
+
+.register-page .register h5 {
+  color: #777;
+  margin: 15px 0;
+}
+
+.register-page .register form {
+  width: 45%;
+  margin: 10px 0;
+  text-align: center;
+}
+
+.register-page .register form .form-item {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin: 12px 0;
+  align-items: center;
+  color: #b1b1b1;
+}
+
+.register-page .register form .form-item input {
+  width: 95%;
+  padding: 8px;
+  border: none;
+  border-bottom: #b1b1b1 solid 1px;
+}
+
+.register-page .register form input[type="submit"] {
+  padding: 4px;
+  width: 40%;
+  border: none;
+  background-color: #b1b1b1;
+  color: #fff;
+  font-size: 17px;
+  margin-top: 15px;
+  cursor: pointer;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+}
+
+.register-page .auth-login {
   width: 34%;
   background: blue;
 }
