--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .container {
-  width: 1250px;
+  width: 1100px;
   margin: auto;
 }
 
@@ -35,7 +35,7 @@ body {
 }
 
 #register {
-  background: url(../images/backtwo.svg);
+  background: url(../images/back.svg);
   background-size: cover;
   height: 100vh;
   width: 100%;
@@ -55,7 +55,6 @@ body {
   -moz-border-radius: 25px;
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
-  padding: 80px 0;
 }
 
 .register-page .register {
@@ -65,6 +64,12 @@ body {
   align-items: center;
   width: 64%;
   background: #fff;
+  padding: 70px 0;
+  border-radius: 0 25px 25px 0;
+  -webkit-border-radius: 0 25px 25px 0;
+  -moz-border-radius: 0 25px 25px 0;
+  -ms-border-radius: 0 25px 25px 0;
+  -o-border-radius: 0 25px 25px 0;
 }
 
 .register-page .register h1 {
@@ -136,13 +141,24 @@ body {
   padding: 8px;
   border: none;
   border-bottom: #b1b1b1 solid 1px;
+  transition: all .3s ease-in;
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  -ms-transition: all .3s ease-in;
+  -o-transition: all .3s ease-in;
 }
+
+
+.register-page .register form .form-item input:focus{
+   border-bottom: #4e4e4e solid px;
+}
+
 
 .register-page .register form input[type="submit"] {
   padding: 4px;
   width: 40%;
   border: none;
-  background-color: #b1b1b1;
+  background-color: #3BB397;;
   color: #fff;
   font-size: 17px;
   margin-top: 15px;
@@ -155,6 +171,56 @@ body {
 }
 
 .register-page .auth-login {
-  width: 34%;
-  background: blue;
+  width: 35%;
+  height: 100%;
+  background: url(../images/2.svg);
+  background-size: cover;
+  padding: 70px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  border-radius: 25px 0 0 25px;
+  -webkit-border-radius: 25px 0 0 25px;
+  -moz-border-radius: 25px 0 0 25px;
+  -ms-border-radius: 25px 0 0 25px;
+  -o-border-radius: 25px 0 0 25px;
+}
+
+.register-page .auth-login img{
+  width: 100px;
+  position: absolute;
+  top: 16px;
+  left: 16px;
+}
+
+.register-page .auth-login .login-content{
+  color: #fff;
+  text-align: center;
+}
+
+.register-page .auth-login .login-content h1{
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.register-page .auth-login .login-content a{
+  background-color: transparent;
+  border: 2px solid #fff;
+  width: 120px;
+  margin-top: 15px;
+  font-size: 13px;
+  padding: 6px 23px;
+  color: #fff;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+  cursor: pointer;
+}
+
+.register-page .auth-login .login-content p{
+  margin: 5px 0 20px 0;
+  font-size: 11px;
 }
